...
                    </view>
                    <navigationItem key="navigationItem" title="Info" id="7uJ-Pb-KMC">
                        <barButtonItem key="leftBarButtonItem" title="Item" image="chevron.backward" catalog="system" id="FfP-pl-ok7">
                            <color key="tintColor" name="darkModeSetNavBar"/>
                            <connections>
...
                                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        <state key="normal" title="Button"/>
                                                        <buttonConfiguration key="configuration" style="plain" title="Browse Pokedex">
                                                            <fontDescription key="titleFontDescription" type="system" pointSize="25"/>
                                                        </buttonConfiguration>
...
                                        </constraints>
                                    </imageView>
                                    <searchBar contentMode="redraw" placeholder="Search: Pokemon Name/ID" translatesAutoresizingMaskIntoConstraints="NO" id="UgS-fc-Rwy">
                                        <rect key="frame" x="0.0" y="42" width="414" height="368"/>
                                        <color key="backgroundColor" name="darkModeSetNavBar"/>
...
                                                                <color key="tintColor" name="darkModeBackgrounds"/>
                                                                <state key="normal" title="Button"/>
                                                                <buttonConfiguration key="configuration" style="plain" image="arrow.left.to.line.compact" catalog="system"/>
                                                                <connections>
                                                                    <action selector="pageButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="oJi-Cl-ExO"/>
...
                                                                <color key="tintColor" name="darkModeBackgrounds"/>
                                                                <state key="normal" title="Button"/>
                                                                <buttonConfiguration key="configuration" style="plain" image="arrow.backward" catalog="system"/>
                                                                <connections>
                                                                    <action selector="pageButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="wiY-Ta-2VX"/>
...
                                                                <color key="tintColor" name="darkModeBackgrounds"/>
                                                                <state key="normal" title="Button"/>
                                                                <buttonConfiguration key="configuration" style="plain" image="arrow.forward" catalog="system"/>
                                                                <connections>
                                                                    <action selector="pageButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="q33-hJ-Wg1"/>
...
                                </connections>
                            </barButtonItem>
                            <barButtonItem title="All" image="heart" catalog="system" width="50" id="h0A-Z5-b11">
                                <color key="tintColor" name="darkModeSetNavBar"/>
                                <connections>
...
