...
    @IBAction func favouritesButtonClicked(_ sender: UIBarButtonItem) {
        
        loadingIndicator()
        
        switch sender.title {
        case "All":
            sender.title = "Favourites"
            sender.image = K.BarButton.fav
            paginationStackView.isHidden = true
            loadFavArray()
            searchPokemons(filter: Filter.favourites.rawValue)
            self.navigationItem.title = "Favourites"
            
...
